include/ztok.h

typedef uint32_t ztok_token_id;
typedef struct ztok_pipeline ztok_pipeline;     /* opaque */
typedef struct ztok_batch_pool ztok_batch_pool; /* opaque */
typedef struct ztok_stream ztok_stream;         /* opaque (streaming encode) */
typedef enum {
    ZTOK_OK = 0,
    ZTOK_ERR_OUT_OF_MEMORY = 1,
    ZTOK_ERR_INVALID_INPUT = 2,
    ZTOK_ERR_BUFFER_TOO_SMALL = 3,
    ZTOK_ERR_INTERNAL = 99,
} ztok_status;
typedef enum {
    ZTOK_NORMALIZER_IDENTITY = 0,
    ZTOK_NORMALIZER_NFC = 1,
    ZTOK_NORMALIZER_NFD = 2,
    ZTOK_NORMALIZER_NFKC = 3,
    ZTOK_NORMALIZER_NFKD = 4,
    ZTOK_NORMALIZER_BYTE_LEVEL = 5,
} ztok_normalizer_kind;
typedef enum {
    ZTOK_PRETOK_IDENTITY = 0,
    ZTOK_PRETOK_CL100K = 1,
} ztok_pretok_kind;
typedef enum {
    ZTOK_MODEL_BYTE_ID = 0,
    /* Concrete model variants are picked by the constructor used (BPE,
     * Unigram, WordPiece, Monster), not via this enum. The byte_id stub
     * remains the only kind selectable from ztok_pipeline_new. */
} ztok_model_kind;
typedef enum {
    ZTOK_DECODER_CONCAT = 0,
    ZTOK_DECODER_WORDPIECE = 1,
    ZTOK_DECODER_BYTE_LEVEL = 2,
} ztok_decoder_kind;
/* Auto-detected on-disk vocab format. Returned by ztok_auto_detect.
 * Values are stable and additive. Unknown files (or any I/O error) map
 * to ZTOK_FORMAT_UNKNOWN — ztok_auto_detect is a best-effort sniffer,
 * never the place to surface a real error. */
typedef enum {
    ZTOK_FORMAT_UNKNOWN = 0,
    ZTOK_FORMAT_TIKTOKEN = 1,
    ZTOK_FORMAT_HF_JSON = 2,
    ZTOK_FORMAT_SP_MODEL = 3,
    ZTOK_FORMAT_ZTM = 4,
    /* Mistral Tekken (`tekken.json`): tiktoken-style BPE with base64
     * `token_bytes` entries, explicit `special_tokens` block, and a
     * top-level `config.pattern` regex. Distinguished from HF
     * tokenizer.json by the `"type": "Tekkenizer"` marker. */
    ZTOK_FORMAT_TEKKEN = 5,
    /* RWKV "World" vocab (`rwkv_vocab_v20230424.txt`): line-oriented
     * `<id> <python-repr> <byte-len>` entries driving a greedy
     * longest-match byte trie. Sniffed by the leading id + quoted/`b`-
     * quoted middle column + trailing length. */
    ZTOK_FORMAT_RWKV = 6,
} ztok_format;
typedef struct {
    ztok_normalizer_kind normalizer;
    ztok_pretok_kind pre_tokenizer;
    ztok_model_kind model;
    ztok_decoder_kind decoder;
} ztok_pipeline_config;
/* --- lifecycle ---------------------------------------------------- */

/* byte_id pipeline driven by the config enums. out_status may be NULL. */
ztok_pipeline* ztok_pipeline_new(const ztok_pipeline_config* cfg, ztok_status* out_status);
void ztok_pipeline_free(ztok_pipeline* p);
/* File-based constructors. cfg_or_null = NULL applies sensible defaults:
 *   { .normalizer = IDENTITY, .pre_tokenizer = IDENTITY,
 *     .model = (set by constructor), .decoder = CONCAT }
 * For BPE-from-tiktoken, default pre_tokenizer is CL100K instead. */
ztok_pipeline* ztok_pipeline_new_bpe_from_tiktoken(
    const char* tiktoken_path,
    const ztok_pipeline_config* cfg_or_null,
    ztok_status* out_status
);
ztok_pipeline* ztok_pipeline_new_bpe_from_hf_json(
    const char* tokenizer_json_path,
    const ztok_pipeline_config* cfg_or_null,
    ztok_status* out_status
);
ztok_pipeline* ztok_pipeline_new_wordpiece_from_hf_json(
    const char* tokenizer_json_path,
    uint32_t unk_id,
    const ztok_pipeline_config* cfg_or_null,
    ztok_status* out_status
);
ztok_pipeline* ztok_pipeline_new_unigram_from_sp_model(
    const char* sp_model_path,
    uint32_t unk_id,
    const ztok_pipeline_config* cfg_or_null,
    ztok_status* out_status
);
/* Monster loader. Reads the ztok-native .ztm binary format (magic
 * "ZTM\x01", little-endian); see src/monster_io.zig for the layout. */
ztok_pipeline* ztok_pipeline_new_monster_from_file(
    const char* path,
    const ztok_pipeline_config* cfg_or_null,
    ztok_status* out_status
);
/* RWKV "World" loader. Reads a `rwkv_vocab_v20230424.txt`-style file
 * (`<id> <python-repr> <byte-len>` per line) into a greedy longest-match
 * byte trie. The pipeline runs identity normalizer + identity
 * pre-tokenizer + concat decoder, matching the byte-lossless World
 * scheme (every byte 0..255 is a token, so encode never fails). */
ztok_pipeline* ztok_pipeline_new_rwkv_from_file(
    const char* path,
    const ztok_pipeline_config* cfg_or_null,
    ztok_status* out_status
);
/* --- encode / decode --------------------------------------------- */

/* Encode: writes ids directly into the caller buffer. *out_len receives
 * the count written. If out is NULL or out_cap is too small, *out_len
 * is set to the required size and ZTOK_ERR_BUFFER_TOO_SMALL is
 * returned. */
ztok_status ztok_encode(
    const ztok_pipeline* p,
    const char* input, size_t input_len,
    ztok_token_id* out, size_t out_cap,
    size_t* out_len
);
/* Decode mirrors encode: *out_len receives bytes written. */
ztok_status ztok_decode(
    const ztok_pipeline* p,
    const ztok_token_id* ids, size_t ids_len,
    char* out, size_t out_cap,
    size_t* out_len
);
/* --- encode with overlay channels -------------------------------- */

/* Annotation channels aligned 1:1 with the emitted token stream:
 * channel[i] describes token ids[i]. Requesting overlays does NOT change
 * tokenization — the id stream is identical to ztok_encode.
 *
 * Cheap channels (BYTE_START/BYTE_END/BOUNDARY/PROVENANCE) are derived
 * from state the encoder already computes. Domain channels
 * (OPCODE/OPERAND/SYMBOL_REF/HUNK) and any USER_BASE+ kind are
 * zero-filled until a domain normalizer plugin populates them. */
typedef enum {
    ZTOK_OVERLAY_BYTE_START = 0, /* offsets[i].start (orig-input byte)   */
    ZTOK_OVERLAY_BYTE_END   = 1, /* offsets[i].end (exclusive)           */
    ZTOK_OVERLAY_BOUNDARY   = 2, /* bitset: 0x1 chunk-start, 0x2 cp-start*/
    ZTOK_OVERLAY_OPCODE     = 3, /* domain: normalized opcode class      */
    ZTOK_OVERLAY_OPERAND    = 4, /* domain: normalized operand class     */
    ZTOK_OVERLAY_SYMBOL_REF = 5, /* domain: symbol-table index, 0 = none */
    ZTOK_OVERLAY_HUNK       = 6, /* domain: diff-hunk id                 */
    ZTOK_OVERLAY_PROVENANCE = 7, /* 0 = model text, 1 = special token    */
    ZTOK_OVERLAY_USER_BASE  = 0x8000 /* domain plugins claim >= this     */
} ztok_overlay_kind;
/* One requested channel. `out` is a caller-owned buffer of `out_cap`
 * uint32_t entries, filled with one value per token. */
typedef struct {
    ztok_overlay_kind kind;
    uint32_t*         out;
    size_t            out_cap;
} ztok_overlay_channel;
/* Encode `input`, writing ids into `out_ids` and each channel's per-token
 * values into channels[i].out. All buffers share the token count reported
 * via *out_len.
 *
 * Sizing: pass out_ids = NULL to query the count (returns
 * ZTOK_ERR_BUFFER_TOO_SMALL, sets *out_len). When out_ids is non-NULL,
 * every listed channel's `out` must be non-NULL with capacity >= *out_len;
 * if any buffer is too small, nothing is copied, *out_len is set to the
 * required count, and ZTOK_ERR_BUFFER_TOO_SMALL is returned. */
ztok_status ztok_encode_with_overlays(
    const ztok_pipeline* p,
    const char* input, size_t input_len,
    ztok_token_id* out_ids, size_t out_ids_cap,
    ztok_overlay_channel* channels, size_t n_channels,
    size_t* out_len
);
/* --- batch encode ------------------------------------------------- */

/* Per-call thread pool. inputs/input_lens are parallel arrays of n
 * entries. out_ids[i] receives a heap-allocated array of length
 * out_lens[i]; caller must call ztok_ids_free(out_ids[i]) for each. On
 * any failure, partial allocations are freed internally and ZTOK_ERR_*
 * is returned. n_workers=0 means auto-detect cpu count.
 *
 * Spawns one worker pool per call. For hot loops, prefer the persistent
 * pool API below — `ztok_encode_batch_pooled` reuses arenas + worker
 * threads across calls. */
ztok_status ztok_encode_batch(
    const ztok_pipeline* p,
    const char* const* inputs, const size_t* input_lens, size_t n,
    ztok_token_id** out_ids, size_t* out_lens,
    uint32_t n_workers
);
/* Persistent BatchPool. Create once, reuse across many batches. */
ztok_batch_pool* ztok_batch_pool_new(uint32_t n_workers, ztok_status* out_status); /* 0 = auto */
void ztok_batch_pool_free(ztok_batch_pool* pool);
size_t ztok_batch_pool_worker_count(const ztok_batch_pool* pool);
/* Batch encode via a persistent pool. Same out-array contract as
 * ztok_encode_batch; each out_ids[i] must be freed with ztok_ids_free. */
ztok_status ztok_encode_batch_pooled(
    const ztok_pipeline* p,
    const ztok_batch_pool* pool,
    const char* const* inputs, const size_t* input_lens, size_t n,
    ztok_token_id** out_ids, size_t* out_lens
);
void ztok_ids_free(ztok_token_id* ids);
/* --- Engram n-gram hashing ---------------------------------------- */

/* Deterministic multi-head token-n-gram hashing for Engram-style
 * conditional-memory addressing. Operates on raw token ids — no
 * pipeline handle needed. Output is row-major [position][head]: the
 * `heads` hashes for window position 0 come first, then position 1, etc.
 * Raw u64 hashes are emitted; mask each to your table width
 * (hash & ((1<<bits)-1)). The number of window positions for an
 * `n_ids`-long stream is (n_ids - n + 1), or 0 if shorter than n. */

/* Hash every length-`n` window of `ids` under `heads` hash functions.
 * `out` is a caller-owned buffer of `out_cap` uint64_t entries. On
 * success writes positions*heads hashes and sets *out_len to that count.
 * If `out` is NULL or too small, sets *out_len to the required count and
 * returns ZTOK_BUFFER_TOO_SMALL without writing. A stream shorter than
 * one window (or n/heads == 0) needs 0 entries and returns ZTOK_OK. */
ztok_status ztok_ngram_hash(
    const ztok_token_id* ids, size_t n_ids,
    uint32_t n, uint32_t heads,
    uint64_t* out, size_t out_cap, size_t* out_len
);
/* Hash `n_docs` id streams in parallel across `pool`. Each out_hashes[i]
 * is set to a ztok-allocated uint64_t buffer (free with ztok_u64s_free)
 * holding the row-major hashes for doc i, with out_lens[i] its u64
 * count. A stream shorter than one window yields a NULL buffer and 0. */
ztok_status ztok_ngram_hash_batch(
    ztok_batch_pool* pool,
    const ztok_token_id* const* id_arrays, const size_t* id_lens, size_t n_docs,
    uint32_t n, uint32_t heads,
    uint64_t** out_hashes, size_t* out_lens
);
/* Free a uint64_t buffer returned by ztok_ngram_hash_batch. */
void ztok_u64s_free(uint64_t* hashes);
/* --- chunking ----------------------------------------------------- */

/* One token-window chunk produced by ztok_chunk. `ids` points at a
 * ztok-allocated buffer of `ids_len` token ids (NULL when ids_len==0).
 * `byte_start`/`byte_end` are the half-open byte range this chunk covers
 * in the ORIGINAL input; `token_start`/`token_end` the half-open
 * token-index range in the full encoding. */
typedef struct {
    ztok_token_id* ids;
    size_t ids_len;
    uint32_t byte_start;
    uint32_t byte_end;
    uint32_t token_start;
    uint32_t token_end;
} ztok_chunk_rec;
/* Boundary mode for ztok_chunk (mirrors chunk.Boundary). */
typedef enum {
    ZTOK_CHUNK_BOUNDARY_TOKEN     = 0, /* pure token-count windows */
    ZTOK_CHUNK_BOUNDARY_CODEPOINT = 1, /* snap to UTF-8 codepoint boundary */
    ZTOK_CHUNK_BOUNDARY_WORD      = 2, /* snap to whitespace word boundary */
    ZTOK_CHUNK_BOUNDARY_WORD_DICT = 3, /* dict word boundary (CJK/Thai...) */
    ZTOK_CHUNK_BOUNDARY_SENTENCE  = 4, /* snap to sentence boundary */
    ZTOK_CHUNK_BOUNDARY_PARAGRAPH = 5, /* snap to \n\n */
} ztok_chunk_boundary;
/* Split `text` into windows of at most `max_tokens` tokens with `overlap`
 * tokens shared between neighbors (stride = max_tokens - overlap).
 * `out_chunks` is a caller-owned buffer of `out_cap` records. On success
 * writes one record per chunk and sets *out_len to the chunk count. If
 * `out_chunks` is NULL or too small, sets *out_len to the required count
 * and returns ZTOK_BUFFER_TOO_SMALL without writing (no ids allocated).
 * Empty input yields 0 chunks and ZTOK_OK. Returns ZTOK_ERR_INVALID_INPUT
 * if max_tokens==0, overlap>=max_tokens, or boundary is out of range.
 * Each written record's `ids` must be released with ztok_chunks_free. */
ztok_status ztok_chunk(
    const ztok_pipeline* pipeline,
    const char* text, size_t text_len,
    uint32_t max_tokens, uint32_t overlap, uint32_t boundary,
    ztok_chunk_rec* out_chunks, size_t out_cap, size_t* out_len
);
/* Free the `ids` buffers of `n` chunk records written by ztok_chunk. The
 * `chunks` array itself is caller-owned and is not freed. */
void ztok_chunks_free(ztok_chunk_rec* chunks, size_t n);
/* --- auto-detect -------------------------------------------------- */

/* Best-effort vocab-format sniffer. Reads the first 256 bytes of `path`
 * and matches against the four known magics/heuristics. Returns
 * ZTOK_FORMAT_UNKNOWN on any error (missing file, permission denied,
 * unreadable bytes) — language bindings can use this without first
 * statting the path. */
ztok_format ztok_auto_detect(const char* path);
/* --- streaming encode -------------------------------------------- */

/* Open a streaming encode session against pipeline `p`. The session
 * holds a small carry buffer (default soft cap 1 MiB) and re-encodes
 * from the last safe pre-tokenizer cut on each feed; if the carry ever
 * exceeds the cap, it force-cuts at the nearest UTF-8 codepoint
 * boundary, matching `encodeChunked`'s caveat. */
ztok_stream* ztok_stream_new(const ztok_pipeline* p, ztok_status* out_status);
void ztok_stream_free(ztok_stream* s);
/* Feed `n_bytes` of input. On success, *out_ids is set to a
 * length-prefixed buffer carrying every id newly emitted by THIS call,
 * with *out_n_ids holding the count (may be 0 when the encoder is
 * still buffering toward the next safe cut). Caller must free each
 * non-NULL buffer via ztok_ids_free. */
ztok_status ztok_stream_feed(
    ztok_stream* s,
    const char* bytes, size_t n_bytes,
    ztok_token_id** out_ids, size_t* out_n_ids
);
/* Flush any remaining carry as a final encode. Same allocation
 * contract as ztok_stream_feed. Idempotent: a second call is a no-op
 * (returns *out_ids=NULL, *out_n_ids=0). */
ztok_status ztok_stream_finish(
    ztok_stream* s,
    ztok_token_id** out_ids, size_t* out_n_ids
);
/* Version */
const char* ztok_version(void);